blockml/test/errors/04_model/e47/e47m.model
model: e47m
joins:
- from_view: e47_one
  as: a

fields:
- dimension: dim1
  sql: ${a.calc1}      
